syntax = "proto3";
package rpc;

import "rpc/subscription_plan.proto";
import "rpc/user.proto";

service SubscriptionPlanService {

  rpc FindAll(Empty) returns (subscription_plan.SubscriptionPlanResponse) {}

  rpc FindOne(subscription_plan.SubscriptionPlanFilter) returns (subscription_plan.SubscriptionPlan){}

  rpc Create(subscription_plan.SubscriptionPlanInput) returns (subscription_plan.SubscriptionPlan){}

  rpc Update(subscription_plan.UpdateSubscriptionPlanRequest) returns (subscription_plan.UpdateSubscriptionPlanResponse){}

  rpc Delete(subscription_plan.SubscriptionPlanFilter) returns (subscription_plan.DeleteSubscriptionPlanResponse){}

}

service UserService {

  rpc FindAll(Empty) returns (user.UserResponse) {}

  rpc FindOne(user.UserFilter) returns (user.User){}

  rpc Create(user.UserInput) returns (user.User){}

  rpc Update(user.UpdateUserRequest) returns (user.UpdateUserResponse){}

  rpc Delete(user.UserFilter) returns (user.DeleteUserResponse){}

}
message Empty {}

