syntax = "proto3";

package user;

message UserInput {
  enum UserRole {

      ADMIN = 0;
      SUBSCRIBER = 1;
   
  }

  string name = 1;
  string email = 2;
  string raw_password = 3;
  UserRole role=4;
  string phone_number = 5;
  

}


message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string raw_password = 4;
  UserRole role=5;
  string phone_number = 6;

}
message DeleteUserResponse {
  int32 modified = 1;
  repeated User edges = 2;
}

message UpdateUserRequest {
  UserInput payload = 1;
  UserFilter where = 2;
}

message UpdateUserResponse {
  int32 modified = 1;
  repeated User edges = 2;
}

message UserResponse {
  int32 page_info = 1;
  repeated User edges = 2;
}
message Pagination {
  int32 total = 1;
  bool has_more =2;
  int32 limit =3;
  int32 skip = 4;
}
message UserFilter {
  string id = 1;
}
